--- a/CashFlow.Exception/CashFlow.Exception.csproj
+++ b/CashFlow.Exception/CashFlow.Exception.csproj
@@ -6,4 +6,20 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="ResourcesErrorMessages.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>ResourcesErrorMessages.Designer.cs</LastGenOutput>
+        <AccessModifier>Public</AccessModifier>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="ResourcesErrorMessages.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>ResourcesErrorMessages.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
