Utilizando autoMapper + aplicando Open-Closed Principle na classe de erros

--- a/CashFlow.Api/appsettings.Development.json
+++ b/CashFlow.Api/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Connetion": "Server=localhost;Database=cashflowdb;Uid=root;Pwd=F7i$#mXD7M6B;"
   }
 }
