--- a/CashFlow.Api/CashFlow.Api.csproj
+++ b/CashFlow.Api/CashFlow.Api.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\CashFlow.Application\CashFlow.Application.csproj" />
       <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication.csproj" />
+      <ProjectReference Include="..\CashFlow.Infrastructure\CashFlow.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
