--- a/CashFlow.Domain/CashFlow.Domain.csproj
+++ b/CashFlow.Domain/CashFlow.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication.csproj" />
+    </ItemGroup>
+
 </Project>
