--- a/CashFlow.Infrastructure/CashFlow.Infrastructure.csproj
+++ b/CashFlow.Infrastructure/CashFlow.Infrastructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CashFlow.Domain\CashFlow.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
