criando autenticação com jwt

--- a/CashFlow.Api/appsettings.Development.json
+++ b/CashFlow.Api/appsettings.Development.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
     "Connetion": "Server=localhost;Database=cashflowdb;Uid=root;Pwd=F7i$#mXD7M6B;"
+  },
+  "Settings" : {
+    "Jwt": {
+      "SigningKey": "9qqf*a1QHtpHw>]scaB0B:1H+cq=,mq:",
+      "ExpiresMinutes": 1000
+    }
   }
 }
