--- a/tests/CommomTestUtiilities/CommomTestUtiilities.csproj
+++ b/tests/CommomTestUtiilities/CommomTestUtiilities.csproj
@@ -7,11 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\CashFlow.Application\CashFlow.Application.csproj" />
       <ProjectReference Include="..\..\CashFlow.Communication\CashFlow.Communication.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="14.0.0" />
       <PackageReference Include="Bogus" Version="35.6.3" />
+      <PackageReference Include="Moq" Version="4.20.72" />
     </ItemGroup>
 
 </Project>
