movendo arquivos para pasta src

--- a/src/CashFlow.Api/CashFlow.Api.csproj
+++ b/src/CashFlow.Api/CashFlow.Api.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
       <ProjectReference Include="..\CashFlow.Application\CashFlow.Application.csproj" />
       <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication.csproj" />
+      <ProjectReference Include="..\CashFlow.Exception\CashFlow.Exception.csproj" />
       <ProjectReference Include="..\CashFlow.Infrastructure\CashFlow.Infrastructure.csproj" />
     </ItemGroup>
 
