--- a/tests/CommomTestUtiilities/CommomTestUtiilities.csproj
+++ b/tests/CommomTestUtiilities/CommomTestUtiilities.csproj
@@ -9,6 +9,9 @@
     <ItemGroup>
       <ProjectReference Include="..\..\CashFlow.Application\CashFlow.Application.csproj" />
       <ProjectReference Include="..\..\CashFlow.Communication\CashFlow.Communication.csproj" />
+      <ProjectReference Include="..\..\src\CashFlow.Application\CashFlow.Application.csproj" />
+      <ProjectReference Include="..\..\src\CashFlow.Communication\CashFlow.Communication.csproj" />
+      <ProjectReference Include="..\..\src\CashFlow.Domain\CashFlow.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
