--- a/tests/Validators.Tests/Validators.Tests.csproj
+++ b/tests/Validators.Tests/Validators.Tests.csproj
@@ -24,6 +24,8 @@
     <ItemGroup>
       <ProjectReference Include="..\..\CashFlow.Application\CashFlow.Application.csproj" />
       <ProjectReference Include="..\..\CashFlow.Exception\CashFlow.Exception.csproj" />
+      <ProjectReference Include="..\..\src\CashFlow.Application\CashFlow.Application.csproj" />
+      <ProjectReference Include="..\..\src\CashFlow.Exception\CashFlow.Exception.csproj" />
       <ProjectReference Include="..\CommomTestUtiilities\CommomTestUtiilities.csproj" />
     </ItemGroup>
 
