Criando Dockerfile + alterando para possibilitar escolher a porta da api via appsetings

--- a/src/CashFlow.Api/appsettings.Development.json
+++ b/src/CashFlow.Api/appsettings.Development.json
@@ -7,5 +7,15 @@
       "SigningKey": "9qqf*a1QHtpHw>]scaB0B:1H+cq=,mq:",
       "ExpiresMinutes": 1000
     }
+  },
+   "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:4000"
+      },
+      "Https": {
+        "Url": "https://*:4001"
+      }
+    }
   }
 }
